// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinaryPagination should render empty 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-35l4ss-0 bnEHjt"
>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 fjGTlq"
  />
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 ibbqOI"
  />
</div>
`;

exports[`BinaryPagination should render with data 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-35l4ss-0 bnEHjt"
>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 fjGTlq"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkArrow-sc-35l4ss-3 iqANll"
          >
            ←
          </span>
          <span
            className="BinaryPagination__LinkText-sc-35l4ss-2 gmmRgB"
          >
            Prev title
          </span>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 ibbqOI"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkText-sc-35l4ss-2 gmmRgB"
          >
            Next title
          </span>
          <span
            className="BinaryPagination__LinkArrow-sc-35l4ss-3 iqANll"
          >
            →
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BinaryPagination should use slug if title not provided 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-35l4ss-0 bnEHjt"
>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 fjGTlq"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkArrow-sc-35l4ss-3 iqANll"
          >
            ←
          </span>
          <span
            className="BinaryPagination__LinkText-sc-35l4ss-2 gmmRgB"
          >
            /prev
          </span>
        </div>
      </li>
    </ul>
  </div>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 ibbqOI"
  >
    <ul
      className="pagination binary-pagination"
    >
      <li
        className="page-item"
      >
        <div
          data-mock="Link"
        >
          <span
            className="BinaryPagination__LinkText-sc-35l4ss-2 gmmRgB"
          >
            /next
          </span>
          <span
            className="BinaryPagination__LinkArrow-sc-35l4ss-3 iqANll"
          >
            →
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`BinaryPagination shouldn't render without slug 1`] = `
<div
  className="BinaryPagination__PaginationContainer-sc-35l4ss-0 bnEHjt"
>
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 fjGTlq"
  />
  <div
    className="BinaryPagination__PaginationItem-sc-35l4ss-1 ibbqOI"
  />
</div>
`;
